--- a/cub final/.vscode/launch.json
+++ b/cub final/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceRoot}/cub3D",
-            "args": ["map1.cub"],
+            "args": ["map.cub"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
